--- a/requirements.txt
+++ b/requirements.txt
@@ -3,14 +3,15 @@ easydict
 h5py
 matplotlib
 numpy
-open3d==0.9
+open3d
 opencv-python
 pyyaml
 scipy
 scikit-learn
 tensorboardX
-timm==0.4.5 
+timm
 tqdm
 transforms3d
 termcolor
 trimesh
+ninja
